# learn

./: build_clang.sh  build_clang_64.sh
app/: build.gradle
app/src/androidTest/java/com/huawei/livewallpapger/audiowallpaper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/huawei/livingwallpaper/yiran/common/: MainActivity.java  OrientationSensor.java  SimpleWallpaper.java  WLog.java  WallpaperManagerUitl.java
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: livewallpaper.xml
app/src/test/java/com/huawei/livewallpapger/audiowallpaper/: ExampleUnitTest.java
com/zym/learn/: HttpsUtils.java
com/zym/learn/ffmpeg/: ZMediaPlayer.java
com/zym/strategy/: FunPenCourt.java
cpp/: CMakeLists.txt  native-lib.cpp
